Compile quorum; add readme

--- a/quorum-test-network/config/goquorum/Dockerfile
+++ b/quorum-test-network/config/goquorum/Dockerfile
@@ -1,9 +1,33 @@
-ARG QUORUM_VERSION=latest
+# -------------------------
+# Dockerfile from quorum, commit 8585ac91f
+# -------------------------
+# Build Geth in a stock Go builder container
+FROM golang:1.22-alpine as builder
 
-FROM quorumengineering/quorum:${QUORUM_VERSION}
+RUN apk add --no-cache gcc musl-dev linux-headers git
 
-RUN apk add --no-cache curl
+# Get dependencies - will also be cached if we won't change go.mod/go.sum
+COPY quorum-code/go.mod /go-ethereum/
+COPY quorum-code/go.sum /go-ethereum/
+RUN cd /go-ethereum && go mod download
 
+ADD quorum-code/ /go-ethereum/
+RUN cd /go-ethereum && go run build/ci.go install -static ./cmd/geth
+RUN cd /go-ethereum && go run build/ci.go install -static ./cmd/bootnode
+
+# Pull Geth into a second stage deploy alpine container
+FROM alpine:latest
+
+RUN apk add --no-cache ca-certificates curl
+RUN apk add --no-cache openssl # quorum (6 may 2024): 3.1.4-r5 is the installed openssl version, want 3.1.4-r6 to get fix for CVE-2024-2511
+COPY --from=builder /go-ethereum/build/bin/geth /usr/local/bin/
+COPY --from=builder /go-ethereum/build/bin/bootnode /usr/local/bin/
+
+EXPOSE 8545 8546 30303 30303/udp
+
+# -------------------------
+# Dockerfile from dev quickstart
+# -------------------------
 COPY docker-entrypoint.sh /usr/local/bin/
 COPY data data
 
