--- a/config/goquorum/Dockerfile
+++ b/config/goquorum/Dockerfile
@@ -31,10 +31,6 @@ EXPOSE 8545 8546 30303 30303/udp
 COPY docker-entrypoint.sh /usr/local/bin/
 COPY data data
 
-RUN mkdir -p /data /permissions /var/log/quorum \
-    && addgroup -g 1000 quorum \
-    && adduser -u 1000 -G quorum -s /bin/sh -D quorum \
-    && chown -R quorum:quorum /data /permissions /var/log/quorum 
-USER quorum
+RUN mkdir -p /data /permissions /var/log/quorum
 
-ENTRYPOINT ["docker-entrypoint.sh"]
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
